# autoodo

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
openapi/: openapi.yaml
src/: lib.rs  main.rs
src/autoodo/: client.rs  config.rs  mod.rs  structs.rs
src/autoodo/client/: client.rs  mod.rs  structs.rs
src/autoodo/engine/: action.rs  any.rs  engine.rs  mod.rs  state.rs  trigger.rs
