[package]
name = "autoodo-cli"
version = "0.1.0"
edition = "2024"
authors = ["Dirk Faust <dirk@faustbande.de>"]

[profile.release]
opt-level = 3
debug = false
#lto = "thin"
# FTR: sccache can not handle incremental builds
incremental = true

[[bin]]
name = "autoodo-rust-cli"
path = "src/main.rs"

[lib]
name = "autoodo"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1"
log = "0.4"
dotenv = "0.14.1"
envconfig = "0.11.1"
url = "2"